--- a/prototype.ipynb
+++ b/prototype.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -123,50 +123,93 @@
      ]
     },
     {
-     "ename": "Pkg.Resolve.ResolverError",
-     "evalue": "Unsatisfiable requirements detected for package \u001b[38;5;2mMakie [ee78f7c6]\u001b[39m:\n \u001b[38;5;2mMakie [ee78f7c6]\u001b[39m log:\n ├─possible versions are: \u001b[38;5;2m0.9.0-0.19.0\u001b[39m or uninstalled\n ├─restricted to versions \u001b[38;5;2m0.19.0\u001b[39m by an explicit requirement, leaving only versions \u001b[38;5;2m0.19.0\u001b[39m\n └─restricted by compatibility requirements with \u001b[38;5;3mTopoPlots [2bdbdf9c]\u001b[39m to versions: \u001b[38;5;2m0.17.8-0.18.4\u001b[39m — no versions left\n   └─\u001b[38;5;3mTopoPlots [2bdbdf9c]\u001b[39m log:\n     ├─possible versions are: \u001b[38;5;3m0.1.0-0.1.2\u001b[39m or uninstalled\n     └─restricted to versions \u001b[38;5;3m*\u001b[39m by an explicit requirement, leaving only versions \u001b[38;5;3m0.1.0-0.1.2\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "Unsatisfiable requirements detected for package \u001b[38;5;2mMakie [ee78f7c6]\u001b[39m:\n",
-      " \u001b[38;5;2mMakie [ee78f7c6]\u001b[39m log:\n",
-      " ├─possible versions are: \u001b[38;5;2m0.9.0-0.19.0\u001b[39m or uninstalled\n",
-      " ├─restricted to versions \u001b[38;5;2m0.19.0\u001b[39m by an explicit requirement, leaving only versions \u001b[38;5;2m0.19.0\u001b[39m\n",
-      " └─restricted by compatibility requirements with \u001b[38;5;3mTopoPlots [2bdbdf9c]\u001b[39m to versions: \u001b[38;5;2m0.17.8-0.18.4\u001b[39m — no versions left\n",
-      "   └─\u001b[38;5;3mTopoPlots [2bdbdf9c]\u001b[39m log:\n",
-      "     ├─possible versions are: \u001b[38;5;3m0.1.0-0.1.2\u001b[39m or uninstalled\n",
-      "     └─restricted to versions \u001b[38;5;3m*\u001b[39m by an explicit requirement, leaving only versions \u001b[38;5;3m0.1.0-0.1.2\u001b[39m\n",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m   Installed\u001b[22m\u001b[39m AlgebraOfGraphics ─ v0.6.13\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `C:\\Users\\Vlad\\Projects\\Dashboard\\env\\Project.toml`\n",
+      " \u001b[90m [cbdf2221] \u001b[39m\u001b[93m↑ AlgebraOfGraphics v0.6.12 ⇒ v0.6.13\u001b[39m\n",
+      " \u001b[90m [13f3f980] \u001b[39m\u001b[93m↑ CairoMakie v0.9.4 ⇒ v0.10.0\u001b[39m\n",
+      " \u001b[90m [e9467ef8] \u001b[39m\u001b[93m↑ GLMakie v0.7.4 ⇒ v0.8.0\u001b[39m\n",
+      " \u001b[90m [ee78f7c6] \u001b[39m\u001b[93m↑ Makie v0.18.4 ⇒ v0.19.0\u001b[39m\n",
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `C:\\Users\\Vlad\\Projects\\Dashboard\\env\\Manifest.toml`"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
-      "Stacktrace:\n",
-      "  [1] propagate_constraints!(graph::Pkg.Resolve.Graph, sources::Set{Int64}; log_events::Bool)\n",
-      "    @ Pkg.Resolve C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.8.3\\share\\julia\\stdlib\\v1.8\\Pkg\\src\\Resolve\\graphtype.jl:1072\n",
-      "  [2] propagate_constraints! (repeats 2 times)\n",
-      "    @ C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.8.3\\share\\julia\\stdlib\\v1.8\\Pkg\\src\\Resolve\\graphtype.jl:1008 [inlined]\n",
-      "  [3] simplify_graph!(graph::Pkg.Resolve.Graph, sources::Set{Int64}; clean_graph::Bool)\n",
-      "    @ Pkg.Resolve C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.8.3\\share\\julia\\stdlib\\v1.8\\Pkg\\src\\Resolve\\graphtype.jl:1533\n",
-      "  [4] simplify_graph! (repeats 2 times)\n",
-      "    @ C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.8.3\\share\\julia\\stdlib\\v1.8\\Pkg\\src\\Resolve\\graphtype.jl:1532 [inlined]\n",
-      "  [5] resolve_versions!(env::Pkg.Types.EnvCache, registries::Vector{Pkg.Registry.RegistryInstance}, pkgs::Vector{Pkg.Types.PackageSpec}, julia_version::VersionNumber)\n",
-      "    @ Pkg.Operations C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.8.3\\share\\julia\\stdlib\\v1.8\\Pkg\\src\\Operations.jl:352\n",
-      "  [6] targeted_resolve(env::Pkg.Types.EnvCache, registries::Vector{Pkg.Registry.RegistryInstance}, pkgs::Vector{Pkg.Types.PackageSpec}, preserve::Pkg.Types.PreserveLevel, julia_version::VersionNumber)\n",
-      "    @ Pkg.Operations C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.8.3\\share\\julia\\stdlib\\v1.8\\Pkg\\src\\Operations.jl:1254\n",
-      "  [7] tiered_resolve(env::Pkg.Types.EnvCache, registries::Vector{Pkg.Registry.RegistryInstance}, pkgs::Vector{Pkg.Types.PackageSpec}, julia_version::VersionNumber)\n",
-      "    @ Pkg.Operations C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.8.3\\share\\julia\\stdlib\\v1.8\\Pkg\\src\\Operations.jl:1239\n",
-      "  [8] _resolve(io::VSCodeServer.IJuliaCore.IJuliaStdio{Base.PipeEndpoint, typeof(VSCodeServer.io_send_callback)}, env::Pkg.Types.EnvCache, registries::Vector{Pkg.Registry.RegistryInstance}, pkgs::Vector{Pkg.Types.PackageSpec}, preserve::Pkg.Types.PreserveLevel, julia_version::VersionNumber)\n",
-      "    @ Pkg.Operations C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.8.3\\share\\julia\\stdlib\\v1.8\\Pkg\\src\\Operations.jl:1260\n",
-      "  [9] add(ctx::Pkg.Types.Context, pkgs::Vector{Pkg.Types.PackageSpec}, new_git::Set{Base.UUID}; preserve::Pkg.Types.PreserveLevel, platform::Base.BinaryPlatforms.Platform)\n",
-      "    @ Pkg.Operations C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.8.3\\share\\julia\\stdlib\\v1.8\\Pkg\\src\\Operations.jl:1276\n",
-      " [10] add(ctx::Pkg.Types.Context, pkgs::Vector{Pkg.Types.PackageSpec}; preserve::Pkg.Types.PreserveLevel, platform::Base.BinaryPlatforms.Platform, kwargs::Base.Pairs{Symbol, VSCodeServer.IJuliaCore.IJuliaStdio{Base.PipeEndpoint, typeof(VSCodeServer.io_send_callback)}, Tuple{Symbol}, NamedTuple{(:io,), Tuple{VSCodeServer.IJuliaCore.IJuliaStdio{Base.PipeEndpoint, typeof(VSCodeServer.io_send_callback)}}}})\n",
-      "    @ Pkg.API C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.8.3\\share\\julia\\stdlib\\v1.8\\Pkg\\src\\API.jl:275\n",
-      " [11] add(pkgs::Vector{Pkg.Types.PackageSpec}; io::VSCodeServer.IJuliaCore.IJuliaStdio{Base.PipeEndpoint, typeof(VSCodeServer.io_send_callback)}, kwargs::Base.Pairs{Symbol, Union{}, Tuple{}, NamedTuple{(), Tuple{}}})\n",
-      "    @ Pkg.API C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.8.3\\share\\julia\\stdlib\\v1.8\\Pkg\\src\\API.jl:156\n",
-      " [12] add(pkgs::Vector{Pkg.Types.PackageSpec})\n",
-      "    @ Pkg.API C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.8.3\\share\\julia\\stdlib\\v1.8\\Pkg\\src\\API.jl:145\n",
-      " [13] #add#26\n",
-      "    @ C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.8.3\\share\\julia\\stdlib\\v1.8\\Pkg\\src\\API.jl:143 [inlined]\n",
-      " [14] add(pkg::Pkg.Types.PackageSpec)\n",
-      "    @ Pkg.API C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.8.3\\share\\julia\\stdlib\\v1.8\\Pkg\\src\\API.jl:143\n",
-      " [15] top-level scope\n",
-      "    @ c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:1"
+      " \u001b[90m [cbdf2221] \u001b[39m\u001b[93m↑ AlgebraOfGraphics v0.6.12 ⇒ v0.6.13\u001b[39m\n",
+      " \u001b[90m [13f3f980] \u001b[39m\u001b[93m↑ CairoMakie v0.9.4 ⇒ v0.10.0\u001b[39m\n",
+      " \u001b[90m [e9467ef8] \u001b[39m\u001b[93m↑ GLMakie v0.7.4 ⇒ v0.8.0\u001b[39m\n",
+      " \u001b[90m [ee78f7c6] \u001b[39m\u001b[93m↑ Makie v0.18.4 ⇒ v0.19.0\u001b[39m\n",
+      " \u001b[90m [20f20a25] \u001b[39m\u001b[93m↑ MakieCore v0.5.2 ⇒ v0.6.0\u001b[39m"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "project...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m  ✓ \u001b[39m\u001b[90mMakieCore\u001b[39m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m  ✓ \u001b[39mMakie\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m  ✓ \u001b[39mAlgebraOfGraphics\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m  ✓ \u001b[39mTopoPlots\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m  ✓ \u001b[39mCairoMakie\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m  ✓ \u001b[39mGLMakie\n",
+      "  6 dependencies successfully precompiled in 126 seconds. 281 already precompiled.\n",
+      "  \u001b[33m4\u001b[39m dependencies precompiled but different versions are currently loaded. Restart julia to access the new versions\n"
      ]
     }
    ],
@@ -261,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -301,10 +344,10 @@
     "\n",
     "# animation\n",
     "framerate = 1\n",
-    "timestamps = [-0.3, 0.0828125, 0.1609375, 0.2390625]\n",
+    "timestamps = [ 0.0046875,    0.1609375,    0.3171875,    0.4734375,    0.6296875,    0.7859375,    0.9421875]\n",
     "record(f, \"animations/topoplot.gif\", timestamps;\n",
     "        framerate = framerate) do z\n",
-    "    sg.sliders[1].value[] = z\n",
+    "    Makie.set_close_to!(sg.sliders[1], z)\n",
     "    time[] = z\n",
     "end"
    ]
@@ -376,19 +419,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"animations/butterfly_topoplot.gif\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# butterflyplot with interactiv topoplot\n",
     "let \n",
@@ -442,8 +482,7 @@
     "\n",
     "    #a3 = Axis()\n",
     "    Label(f[1, 2], str,\n",
-    "        textsize = 36,\n",
-    "        #fontsize = 26,\n",
+    "        textsize =36, # font?\n",
     "        font = :bold,\n",
     "        padding = (40, 500, 0, 0),\n",
     "        halign = :right)\n",
@@ -453,15 +492,15 @@
     "    hidespines!(current_axis())\n",
     "    f\n",
     "\n",
-    "    # animation\n",
+    "#=     # animation\n",
     "    framerate = 1\n",
     "    timestamps = [ 0.0046875,    0.1609375,    0.3171875,    0.4734375,    0.6296875,    0.7859375,    0.9421875]\n",
     "\n",
     "    record(f, \"animations/butterfly_topoplot.gif\", timestamps;\n",
     "            framerate = framerate) do z\n",
-    "        sg.sliders[1].value = z\n",
+    "        Makie.set_close_to!(sg.sliders[1], z)\n",
     "        time[] = z\n",
-    "    end\n",
+    "    end =#\n",
     "end"
    ]
   },
@@ -515,15 +554,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# classic butterflyplot\n",
     "let    \n",
     "    f = Figure(backgroundcolor = RGBf(0.98, 0.98, 0.98), resolution = (1500, 700))\n",
     "    ax = Axis(f[1:2,1], xlabel = \"Time [s]\", ylabel = \"Voltage amplitude [µV]\")\n",
     "    \n",
+    "    toggles = [Toggle(f, active = active) for active in [true]]\n",
+    "    labels = [Label(f, lift(x -> x ? \"colored\" : \"not colored\", t.active))\n",
+    "            for t in toggles]\n",
+    "    f[1, 2] = grid!(hcat(toggles, labels), tellheight = false)\n",
+    "\n",
     "    N = 1:length(pos) #1:4 \n",
     "    hidespines!(ax, :t, :r) \n",
     "    GLMakie.xlims!(-0.3, 1.2)\n",
@@ -534,11 +579,13 @@
     "\n",
     "    for i in N\n",
     "        mean_trial = mean(dat_e[i,:,:],dims=2)[:,1]\n",
-    "        lines!(times, mean_trial, color = specialColors[i])\n",
+    "        line1 = lines!(times, mean_trial, color = \"black\")\n",
+    "        line2 = lines!(times, mean_trial, color = specialColors[i])\n",
+    "        connect!(line2.visible, toggles[1].active)\n",
     "    end \n",
     "    hidedecorations!(ax, label = false, ticks = false, ticklabels = false) \n",
     "\n",
-    "    topo_axis = Axis(f[1:2, 2], width = 78, height = 78, aspect = DataAspect())\n",
+    "    topo_axis = Axis(f[1:2, 2], width = 178, height = 178, aspect = DataAspect())\n",
     "\n",
     "\tMakie.xlims!(low = -0.2, high = 1.2)\n",
     "\tMakie.ylims!(low = -0.2, high = 1.2)\n",
@@ -547,13 +594,72 @@
     "    topo = eeg_topoplot!(topo_axis, N, # averaging all trial of 30 participants on Xth msec\n",
     "        raw.ch_names[1:30]; \n",
     "        positions=pos, # produced  automatically from ch_names\n",
-    "        #interpolation=DelaunayMesh(),\n",
+    "        #interpolation=NullInterpolator(),\n",
     "        enlarge=1,\n",
-    "        extrapolation=GeomExtrapolation(enlarge=1.0, geometry=Circle),\n",
+    "        #extrapolation=GeomExtrapolation(enlarge=1.0, geometry=Circle),\n",
+    "        colorrange = (0, length(pos)), # add the 0 for the white-first color\n",
+    "        colormap = specialColors,\n",
     "        label_text=false)\n",
     "    hidedecorations!(current_axis())\n",
     "    hidespines!(current_axis())\n",
     "    f\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: UndefVarError: @subset not defined\nin expression starting at c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:5",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: UndefVarError: @subset not defined\n",
+      "in expression starting at c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:5\n"
+     ]
+    }
+   ],
+   "source": [
+    "let\n",
+    "\n",
+    "    f = Figure()\n",
+    "    ax = Axis(f[1:2,1], xlabel = \"Time [s]\", ylabel = \"Voltage amplitude [µV]\")\n",
+    "    \n",
+    "    N = 1:length(pos) #1:4 \n",
+    "    hidespines!(ax, :t, :r) \n",
+    "    CairoMakie.xlims!(-0.3,0.8)\n",
+    "    hlines!(0, color = :gray, linewidth = 1)\n",
+    "    vlines!(0, color = :gray, linewidth = 1)\n",
+    "\n",
+    "    specialColors = ColorScheme(vcat(RGB(1,1,1.),[posToColor(pos) for pos in pos[N]]...))\n",
+    "\n",
+    "    for i in N\n",
+    "        tmp = data[data[:, :channel] .== i, :] \n",
+    "        lines!(tmp.time, tmp.estimate_bsln_corrected, color = specialColors[i])\n",
+    "    end \n",
+    "    hidedecorations!(ax, label = false, ticks = false, ticklabels = false) \n",
+    "\n",
+    "    topo_axis = Axis(f[1:2,2], width = 78, height = 78, aspect = DataAspect())\n",
+    "\n",
+    "\tMakie.xlims!(low = -0.2, high = 1.2)\n",
+    "\tMakie.ylims!(low = -0.2, high = 1.2)\n",
+    "    topoMatrix = eegHeadMatrix(pos[N], (0.5, 0.5), 0.5)\n",
+    "    \n",
+    "    topoplot = eeg_topoplot!(topo_axis, N, # go from 1:npos\n",
+    "        string.(N); \n",
+    "        positions = pos[N],\n",
+    "        interpolation=NullInterpolator(), # inteprolator that returns only 0\n",
+    "        colorrange = (0, length(pos)), # add the 0 for the white-first color\n",
+    "        colormap = specialColors,\n",
+    "        head = (color=:black, linewidth=1, model = topoMatrix))\n",
+    "\n",
+    "    hidedecorations!(current_axis())\n",
+    "    hidespines!(current_axis())\n",
+    "\n",
+    "    f\n",
+    "    #save(\"plots/plot2.svg\", f)\n",
     "end"
    ]
   }
