--- a/prototype.ipynb
+++ b/prototype.ipynb
@@ -29,7 +29,8 @@
     "for i in list\n",
     "    import Pkg; Pkg.add(i);\n",
     "    print(i, '\\n')\n",
-    "end "
+    "end \n",
+    "#PS C:\\Users\\Vlad\\.julia\\conda\\3\\condabin> .\\conda.bat install mne"
    ]
   },
   {
@@ -38,16 +39,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Makie\n",
-    "using GLMakie\n",
-    "using PyMNE\n",
-    "using JLD2 # loading data\n",
+    "using Colors\n",
     "using TopoPlots\n",
     "using StatsBase # mean/std\n",
     "using Pipe\n",
     "using ColorSchemes\n",
-    "using Colors\n",
-    "using LinearAlgebra\n"
+    "using LinearAlgebra\n",
+    "using PyMNE\n",
+    "using JLD2 # loading data\n",
+    "using Makie\n",
+    "using GLMakie\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Conda\n",
+    "Conda.PYTHONDIR\n",
+    "Conda.ROOTENV\n",
+    "using PythonCall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Pkg\n",
+    "Pkg.build(\"PyMNE\")"
    ]
   },
   {
@@ -71,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -82,6 +105,18 @@
       "└ @ JLD2 C:\\Users\\Vlad\\.julia\\packages\\JLD2\\1YVED\\src\\data\\reconstructing_datatypes.jl:495\n",
       "┌ Warning: type DataFrames.Index does not exist in workspace; reconstructing\n",
       "└ @ JLD2 C:\\Users\\Vlad\\.julia\\packages\\JLD2\\1YVED\\src\\data\\reconstructing_datatypes.jl:495\n"
+     ]
+    },
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: get_info not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: get_info not defined\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:13"
      ]
     }
    ],
@@ -105,116 +140,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions..."
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m   Installed\u001b[22m\u001b[39m AlgebraOfGraphics ─ v0.6.13\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `C:\\Users\\Vlad\\Projects\\Dashboard\\env\\Project.toml`\n",
-      " \u001b[90m [cbdf2221] \u001b[39m\u001b[93m↑ AlgebraOfGraphics v0.6.12 ⇒ v0.6.13\u001b[39m\n",
-      " \u001b[90m [13f3f980] \u001b[39m\u001b[93m↑ CairoMakie v0.9.4 ⇒ v0.10.0\u001b[39m\n",
-      " \u001b[90m [e9467ef8] \u001b[39m\u001b[93m↑ GLMakie v0.7.4 ⇒ v0.8.0\u001b[39m\n",
-      " \u001b[90m [ee78f7c6] \u001b[39m\u001b[93m↑ Makie v0.18.4 ⇒ v0.19.0\u001b[39m\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `C:\\Users\\Vlad\\Projects\\Dashboard\\env\\Manifest.toml`"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " \u001b[90m [cbdf2221] \u001b[39m\u001b[93m↑ AlgebraOfGraphics v0.6.12 ⇒ v0.6.13\u001b[39m\n",
-      " \u001b[90m [13f3f980] \u001b[39m\u001b[93m↑ CairoMakie v0.9.4 ⇒ v0.10.0\u001b[39m\n",
-      " \u001b[90m [e9467ef8] \u001b[39m\u001b[93m↑ GLMakie v0.7.4 ⇒ v0.8.0\u001b[39m\n",
-      " \u001b[90m [ee78f7c6] \u001b[39m\u001b[93m↑ Makie v0.18.4 ⇒ v0.19.0\u001b[39m\n",
-      " \u001b[90m [20f20a25] \u001b[39m\u001b[93m↑ MakieCore v0.5.2 ⇒ v0.6.0\u001b[39m"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "project...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33m  ✓ \u001b[39m\u001b[90mMakieCore\u001b[39m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33m  ✓ \u001b[39mMakie\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m  ✓ \u001b[39mAlgebraOfGraphics\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33m  ✓ \u001b[39mTopoPlots\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m  ✓ \u001b[39mCairoMakie\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33m  ✓ \u001b[39mGLMakie\n",
-      "  6 dependencies successfully precompiled in 126 seconds. 281 already precompiled.\n",
-      "  \u001b[33m4\u001b[39m dependencies precompiled but different versions are currently loaded. Restart julia to access the new versions\n"
+      "\u001b[32m\u001b[1mStatus\u001b[22m\u001b[39m `C:\\Users\\Vlad\\Projects\\Dashboard\\env\\Project.toml`\n",
+      " \u001b[90m [cbdf2221] \u001b[39mAlgebraOfGraphics v0.6.13\n",
+      " \u001b[90m [13f3f980] \u001b[39mCairoMakie v0.10.0\n",
+      " \u001b[90m [35d6a980] \u001b[39mColorSchemes v3.20.0\n",
+      " \u001b[90m [5ae59095] \u001b[39mColors v0.12.9\n",
+      " \u001b[90m [34da2185] \u001b[39mCompat v4.5.0\n",
+      " \u001b[90m [8f4d0f93] \u001b[39mConda v1.7.0\n",
+      " \u001b[90m [8f03c58b] \u001b[39mEffects v0.1.7\n",
+      " \u001b[90m [e9467ef8] \u001b[39mGLMakie v0.8.0\n",
+      " \u001b[90m [5c1252a2] \u001b[39mGeometryBasics v0.4.5\n",
+      " \u001b[90m [033835bb] \u001b[39mJLD2 v0.4.29\n",
+      " \u001b[90m [ee78f7c6] \u001b[39mMakie v0.19.0\n",
+      " \u001b[90m [19eb6ba3] \u001b[39mPacking v0.4.2\n",
+      " \u001b[90m [b98c9c47] \u001b[39mPipe v1.3.0\n",
+      " \u001b[90m [6c5003b2] \u001b[39mPyMNE v0.2.0\n",
+      " \u001b[90m [6099a3de] \u001b[39mPythonCall v0.9.10\n",
+      " \u001b[90m [1277b4bf] \u001b[39mShiftedArrays v2.0.0\n",
+      " \u001b[90m [2913bbd2] \u001b[39mStatsBase v0.33.21\n",
+      " \u001b[90m [2bdbdf9c] \u001b[39mTopoPlots v0.1.3\n",
+      " \u001b[90m [181c99d8] \u001b[39mUnfold v0.3.13\n",
+      " \u001b[90m [37e2e46d] \u001b[39mLinearAlgebra\n"
      ]
     }
    ],
    "source": [
-    "using Pkg; Pkg.Pkg.add(PackageSpec(name=\"Makie\", version=\"0.19.0\"))#update(\"Makie\")"
+    "using Pkg; Pkg.status()#add(PackageSpec(name=\"Makie\", version=\"0.19.0\"))#update(\"Makie\")"
    ]
   },
   {
@@ -234,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,6 +246,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "let \n",
+    "    f = Figure(resolution = (1000, 900))\n",
+    "    xs = range(-0.3, length=size(dat_e, 2), step=1 ./ 128) \n",
+    "    sg = SliderGrid(f[2, 1],\n",
+    "        (label=\"time\", range=xs, format = \"{:.3f} ms\", startvalue = 0),\n",
+    "    )\n",
+    "    time = sg.sliders[1].value\n",
+    "    str = lift(t -> \"[$(round(t, digits = 3)) ms]\", time)\n",
+    "    topo_slice = lift((t, data) -> mean(data[1:30, indexin(t, xs), :], dims=2)[:,1], time, dat_e)\n",
+    "    topo_axis = Axis(f[1, 1], aspect = DataAspect(), title = \"Interactive topoplot\")\n",
+    "    topo = eeg_topoplot!(topo_axis, topo_slice, # averaging all trial of 30 participants on Xth msec\n",
+    "        raw.ch_names[1:30]; \n",
+    "        positions=pos, # produced  automatically from ch_names\n",
+    "        #interpolation=DelaunayMesh(),\n",
+    "        enlarge=1.2,\n",
+    "        markersize = 10,\n",
+    "        lablesize = 10,\n",
+    "        extrapolation=GeomExtrapolation(enlarge=1.3, geometry=Circle),\n",
+    "        label_text=true) # aspect ratio, correlation of height and width\n",
+    "    \n",
+    "    # decrement/increment slider with left/right keys\n",
+    "    on(events(f).keyboardbutton) do btn\n",
+    "        if btn.action in (Keyboard.press, Keyboard.repeat)\n",
+    "            if btn.key == Keyboard.left\n",
+    "                set_close_to!(sg.sliders[1], time[] - 1)\n",
+    "            elseif btn.key == Keyboard.right\n",
+    "                set_close_to!(sg.sliders[1], time[] + 1)\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    text!(topo_axis, 1, 1, text = str,  align = (:center, :center))\n",
+    "    xlims!(-0.2, 1.2)\n",
+    "    ylims!(-0.2, 1.2)\n",
+    "    hidedecorations!(topo_axis)\n",
+    "    hidespines!(topo_axis) \n",
+    "    f"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -296,21 +299,96 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# animation"
+    "let \n",
+    "    dat_e, pos = TopoPlots.example_data()\n",
+    "    f = Figure(resolution = (1000, 900))\n",
+    "    xs = range(-0.3, length=size(dat_e, 2), step=1 ./ 128) \n",
+    "\n",
+    "    topo_axis = Axis(f[1, 1], aspect = DataAspect(), title = \"Interactive topoplot\")\n",
+    "    topo_slice = dat_e[:,120,1]\n",
+    "    #v = str(raw.ch_names)\n",
+    "    topo = eeg_topoplot!(topo_axis, topo_slice, # averaging all trial of 30 participants on Xth msec\n",
+    "        #v[1:30]; \n",
+    "        positions=pos, # produced  automatically from ch_names\n",
+    "        interpolation=NullInterpolator(),\n",
+    "        enlarge=1.2,\n",
+    "        markersize = 10,\n",
+    "        extrapolation=GeomExtrapolation(enlarge=1.3, geometry=Circle),\n",
+    "        label_text=true) # aspect ratio, correlation of height and width\n",
+    "\n",
+    "    xlims!(-0.2, 1.2)\n",
+    "    ylims!(-0.2, 1.2)\n",
+    "    hidedecorations!(topo_axis)\n",
+    "    hidespines!(topo_axis) \n",
+    "    f\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "let\n",
+    "\n",
+    "    dat_e,pos = TopoPlots.example_data()\n",
+    "    f = Figure(resolution = (1000, 900))\n",
+    "    xs = range(-0.3, length=size(dat_e, 2), step=1 ./ 128)\n",
+    "    labels = string.(1:64)\n",
+    "    topo_slice = dat_e[:,120,1]\n",
+    "    topo_axis = Axis(f[1, 1], aspect = DataAspect(), title = \"Interactive topoplot\")\n",
+    "    topo = eeg_topoplot!(topo_axis, topo_slice, # averaging all trial of 30 participants on Xth msec\n",
+    "        labels;\n",
+    "        positions=pos, # produced  automatically from ch_names\n",
+    "        interpolation=NullInterpolator(),\n",
+    "        enlarge=1.2,\n",
+    "        markersize = 10,\n",
+    "        extrapolation=GeomExtrapolation(enlarge=1.3, geometry=Circle),\n",
+    "        label_text=true) # aspect ratio, correlation of height and width\n",
+    "\n",
+    "    xlims!(-0.2, 1.2)\n",
+    "    ylims!(-0.2, 1.2)\n",
+    "    hidedecorations!(topo_axis)\n",
+    "    hidespines!(topo_axis)\n",
+    "    f\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"animations/topoplot.gif\""
+       "30-element Vector{Point{2, Float32}}:\n",
+       " [0.34425032, 0.9384736]\n",
+       " [0.29350892, 0.76728594]\n",
+       " [0.17971344, 0.76714736]\n",
+       " [0.26970726, 0.65690684]\n",
+       " [0.2591214, 0.5451883]\n",
+       " [0.19269812, 0.53699815]\n",
+       " [0.2965354, 0.33236828]\n",
+       " [0.19586267, 0.3166445]\n",
+       " [0.12841484, 0.268648]\n",
+       " [0.26475236, 0.23407465]\n",
+       " ⋮\n",
+       " [0.4660183, 0.5540192]\n",
+       " [0.67508006, 0.5457554]\n",
+       " [0.745902, 0.5383186]\n",
+       " [0.6389228, 0.33225644]\n",
+       " [0.73037195, 0.3169541]\n",
+       " [0.7975908, 0.26319346]\n",
+       " [0.66261953, 0.23306082]\n",
+       " [0.582955, 0.25155059]\n",
+       " [0.56741726, 0.18887134]"
       ]
      },
      "metadata": {},
@@ -318,38 +396,7 @@
     }
    ],
    "source": [
-    "f = Figure(resolution = (1000, 900))\n",
-    "xs = range(-0.3, length=size(dat_e, 2), step=1 ./ 128) \n",
-    "sg = SliderGrid(f[2, 1],\n",
-    "    (label=\"time\", range=xs, format = \"{:.3f} ms\", startvalue = 0),\n",
-    ")\n",
-    "time = sg.sliders[1].value\n",
-    "str = lift(t -> \"[$(round(t, digits = 3)) ms]\", time)\n",
-    "topo_slice = lift((t, data) -> mean(data[1:30, indexin(t, xs), :], dims=2)[:,1], time, dat_e)\n",
-    "topo_axis = Axis(f[1, 1], aspect = DataAspect(), title = \"Interactive topoplot\")\n",
-    "topo = eeg_topoplot!(topo_axis, topo_slice, # averaging all trial of 30 participants on Xth msec\n",
-    "    raw.ch_names[1:30]; \n",
-    "    positions=pos, # produced  automatically from ch_names\n",
-    "    #interpolation=DelaunayMesh(),\n",
-    "    enlarge=1.2,\n",
-    "    markersize = 10,\n",
-    "    extrapolation=GeomExtrapolation(enlarge=1.3, geometry=Circle),\n",
-    "    label_text=true) # aspect ratio, correlation of height and width\n",
-    "\n",
-    "text!(topo_axis, 1, 1, text = str,  align = (:center, :center))\n",
-    "xlims!(-0.2, 1.2)\n",
-    "ylims!(-0.2, 1.2)\n",
-    "hidedecorations!(topo_axis)\n",
-    "hidespines!(topo_axis) \n",
-    "\n",
-    "# animation\n",
-    "framerate = 1\n",
-    "timestamps = [ 0.0046875,    0.1609375,    0.3171875,    0.4734375,    0.6296875,    0.7859375,    0.9421875]\n",
-    "record(f, \"animations/topoplot.gif\", timestamps;\n",
-    "        framerate = framerate) do z\n",
-    "    Makie.set_close_to!(sg.sliders[1], z)\n",
-    "    time[] = z\n",
-    "end"
+    "collect(raw.ch_names[1:30])"
    ]
   },
   {
@@ -558,8 +605,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# classic butterflyplot\n",
+    "# toggle\n",
     "let    \n",
     "    f = Figure(backgroundcolor = RGBf(0.98, 0.98, 0.98), resolution = (1500, 700))\n",
     "    ax = Axis(f[1:2,1], xlabel = \"Time [s]\", ylabel = \"Voltage amplitude [µV]\")\n",
@@ -608,58 +654,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 227,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "LoadError: UndefVarError: @subset not defined\nin expression starting at c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:5",
-     "output_type": "error",
-     "traceback": [
-      "LoadError: UndefVarError: @subset not defined\n",
-      "in expression starting at c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "let\n",
-    "\n",
-    "    f = Figure()\n",
-    "    ax = Axis(f[1:2,1], xlabel = \"Time [s]\", ylabel = \"Voltage amplitude [µV]\")\n",
+    "# toggle\n",
+    "let    \n",
+    "    f = Figure(backgroundcolor = RGBf(0.98, 0.98, 0.98), resolution = (1500, 700))\n",
+    "    ax = Axis(f[1:3, 1], xlabel = \"Time [s]\", ylabel = \"Voltage amplitude [µV]\")\n",
     "    \n",
+    "    toggles = [Toggle(f, active = active) for active in [true]]\n",
+    "    labels = [Label(f, lift(x -> x ? \"colored\" : \"not colored\", t.active))\n",
+    "            for t in toggles]\n",
+    "    f[1, 2] = grid!(hcat(toggles, labels), tellheight = false)\n",
+    "    tb = Textbox(f[3, 2], placeholder = \"Enter an integer\", validator = Int64, tellwidth = false)\n",
+    "    channel = Observable(1.0)\n",
+    "    str = lift(t -> \"[$(Int64(t)) ms]\", channel)\n",
+    "    #X = lift(c -> Int64(c), channel)\n",
+    "\n",
+    "    on(tb.stored_string) do s\n",
+    "        channel[] = parse(Float64, s)\n",
+    "    end\n",
+    "\n",
     "    N = 1:length(pos) #1:4 \n",
     "    hidespines!(ax, :t, :r) \n",
-    "    CairoMakie.xlims!(-0.3,0.8)\n",
+    "    GLMakie.xlims!(-0.3, 1.2)\n",
     "    hlines!(0, color = :gray, linewidth = 1)\n",
     "    vlines!(0, color = :gray, linewidth = 1)\n",
-    "\n",
+    "    times = range(-0.3, length=size(dat_e,2), step=1 ./ 128)\n",
     "    specialColors = ColorScheme(vcat(RGB(1,1,1.),[posToColor(pos) for pos in pos[N]]...))\n",
     "\n",
     "    for i in N\n",
-    "        tmp = data[data[:, :channel] .== i, :] \n",
-    "        lines!(tmp.time, tmp.estimate_bsln_corrected, color = specialColors[i])\n",
+    "        mean_trial = mean(dat_e[i,:,:],dims=2)[:,1]\n",
+    "        if i != lift(c -> Int64(c), channel)[]\n",
+    "            line1 = lines!(times, mean_trial, color = \"black\")\n",
+    "        else\n",
+    "            #text!(ax, 1, 5, text = str,  align = (:center, :center))\n",
+    "            line1 = lines!(times, mean_trial, overdraw = true, color = \"red\")\n",
+    "        end\n",
+    "        line2 = lines!(times, mean_trial, color = specialColors[i])\n",
+    "        connect!(line2.visible, toggles[1].active)\n",
     "    end \n",
     "    hidedecorations!(ax, label = false, ticks = false, ticklabels = false) \n",
     "\n",
-    "    topo_axis = Axis(f[1:2,2], width = 78, height = 78, aspect = DataAspect())\n",
+    "    topo_axis = Axis(f[2, 2], width = 178, height = 178, aspect = DataAspect())\n",
     "\n",
     "\tMakie.xlims!(low = -0.2, high = 1.2)\n",
     "\tMakie.ylims!(low = -0.2, high = 1.2)\n",
     "    topoMatrix = eegHeadMatrix(pos[N], (0.5, 0.5), 0.5)\n",
     "    \n",
-    "    topoplot = eeg_topoplot!(topo_axis, N, # go from 1:npos\n",
-    "        string.(N); \n",
-    "        positions = pos[N],\n",
-    "        interpolation=NullInterpolator(), # inteprolator that returns only 0\n",
+    "    topo = eeg_topoplot!(topo_axis, N, # averaging all trial of 30 participants on Xth msec\n",
+    "        raw.ch_names[1:30]; \n",
+    "        positions=pos, # produced  automatically from ch_names\n",
+    "        #interpolation=NullInterpolator(),\n",
+    "        enlarge=1,\n",
+    "        #extrapolation=GeomExtrapolation(enlarge=1.0, geometry=Circle),\n",
     "        colorrange = (0, length(pos)), # add the 0 for the white-first color\n",
     "        colormap = specialColors,\n",
-    "        head = (color=:black, linewidth=1, model = topoMatrix))\n",
-    "\n",
+    "        label_text=false)\n",
     "    hidedecorations!(current_axis())\n",
     "    hidespines!(current_axis())\n",
-    "\n",
+    "    text!(topo, 1, 1, text = str,  align = (:center, :center))\n",
+    "   \n",
     "    f\n",
-    "    #save(\"plots/plot2.svg\", f)\n",
     "end"
    ]
   }
