--- a/prototype.ipynb
+++ b/prototype.ipynb
@@ -237,15 +237,12 @@
    ],
    "source": [
     "function ft_topo_axis(f, sensornum, times, data;\n",
-    "    time=nothing, width_height = 175, markersize = 1, interpolation=ClaughTochter(), colormap = Reverse(:RdBu))\n",
+    "    time=nothing, width_height = 175, labels=nothing, mark_color=nothing, markersize = 1, interpolation=ClaughTochter(), colormap = Reverse(:RdBu))\n",
     "\n",
     "    N = 1:sensornum\n",
-    "    topo_axis = Axis(f[1, 2], width = width_height, height = width_height, aspect = DataAspect())\n",
-    "\n",
-    "    if time != nothing\n",
-    "        topo_slice = lift((t, data) -> mean(data[1:sensornum, indexin(t, times), :], dims=2)[:,1], time, data)\n",
-    "        \n",
-    "        topo = eeg_topoplot!(topo_axis, topo_slice, N, \n",
+    "    topo_axis = Axis(f, width = width_height, height = width_height, aspect = DataAspect())\n",
+    "    if time == nothing\n",
+    "        topo = eeg_topoplot!(topo_axis, topo_slice, mark_color, N, labels;\n",
     "        positions=pos[1:sensornum], \n",
     "        enlarge=1,\n",
     "        interpolation=interpolation,\n",
@@ -253,18 +250,15 @@
     "        label_scatter=(markersize=markersize, strokewidth=0.5) \n",
     "    )\n",
     "    else\n",
-    "        topo = eeg_topoplot!(topo_axis, N, \n",
+    "        topo_slice = lift((t, data) -> mean(data[1:sensornum, indexin(t, times), :], dims=2)[:,1], time, data)\n",
+    "        \n",
+    "        topo = eeg_topoplot!(topo_axis, topo_slice, N; \n",
     "        positions=pos[1:sensornum], \n",
     "        enlarge=1,\n",
     "        interpolation=interpolation,\n",
     "        colormap = colormap,\n",
     "        label_scatter=(markersize=markersize, strokewidth=0.5) \n",
-    "        )\n",
-    "    end\n",
-    "\n",
-    "    hidedecorations!(topo_axis)\n",
-    "    hidespines!(topo_axis)\n",
-    "    return topo_axis\n",
+    "        ) \n",
     "end"
    ]
   },
@@ -273,6 +267,33 @@
    "metadata": {},
    "source": [
     "# 1. Sliders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.0 topoplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "let \n",
+    "    data, pos = TopoPlots.example_data()\n",
+    "    f = Figure(resolution = (1000, 900))\n",
+    "    xs = range(-0.3, length=size(data, 2), step=1 ./ 128) \n",
+    "\n",
+    "    topo_axis = Axis(f[1, 1], aspect = DataAspect())\n",
+    "    topo_slice = data[:,120,1]\n",
+    "    topo_axis = ft_topo_axis(f[1, 1], length(pos), xs, data; \n",
+    "        time=nothing, topo_slice=topo_slice,  width_height=900, markersize = 10, label_text=false)\n",
+    "\n",
+    "    f\n",
+    "end"
    ]
   },
   {
@@ -291,7 +312,7 @@
     "function slider_topoplot(data, pos; \n",
     "    title=\"Interactive topoplot\", \n",
     "    interpolation=ClaughTochter()) \n",
-    "    f = Figure(resolution = (1000, 900))\n",
+    "    f = Figure(resolution = (900, 600))\n",
     "    N = 1:length(pos)\n",
     "    xs = range(0, length=size(data, 2), step=1 ./ 100) \n",
     "    sg = SliderGrid(f[2, 1],\n",
@@ -299,7 +320,8 @@
     "    )\n",
     "    time = sg.sliders[1].value\n",
     "\n",
-    "    topo_axis = ft_topo_axis(f[1, 1], length(pos), time=time, xs, data, width_height=500, markersize = 1)\n",
+    "    topo_axis = ft_topo_axis(f[1, 1], length(pos), xs, data; \n",
+    "    time=time, width_height=500, markersize = 1)\n",
     "    # decrement/increment slider with left/right keys\n",
     "    on(events(f).keyboardbutton) do btn\n",
     "        if btn.action in (Keyboard.press, Keyboard.repeat)\n",
@@ -317,59 +339,6 @@
     "end\n",
     "\n",
     "slider_topoplot(data, pos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "let \n",
-    "    dat_e, pos = TopoPlots.example_data()\n",
-    "    f = Figure(resolution = (1000, 900))\n",
-    "    xs = range(-0.3, length=size(dat_e, 2), step=1 ./ 128) \n",
-    "\n",
-    "    topo_axis = Axis(f[1, 1], aspect = DataAspect(), title = \"Interactive topoplot\")\n",
-    "    topo_slice = dat_e[:,120,1]\n",
-    "    #v = str(raw.ch_names)\n",
-    "    topo = eeg_topoplot!(topo_axis, topo_slice, # averaging all trial of 30 participants on Xth msec\n",
-    "        #v[1:30]; \n",
-    "        positions=pos, # produced  automatically from ch_names\n",
-    "       # interpolation=NullInterpolator(),\n",
-    "        enlarge=1.2,\n",
-    "        markersize = 10,\n",
-    "        extrapolation=GeomExtrapolation(enlarge=1.3, geometry=Circle),\n",
-    "        label_text=true) # aspect ratio, correlation of height and width\n",
-    "\n",
-    "    xlims!(-0.2, 1.2)\n",
-    "    ylims!(-0.2, 1.2)\n",
-    "    hidedecorations!(topo_axis)\n",
-    "    hidespines!(topo_axis) \n",
-    "    f\n",
-    "end\n",
-    "let\n",
-    "    dat_e,pos = TopoPlots.example_data()\n",
-    "    f = Figure(resolution = (1000, 900))\n",
-    "    xs = range(-0.3, length=size(dat_e, 2), step=1 ./ 128)\n",
-    "    labels = string.(1:64)\n",
-    "    topo_slice = dat_e[:,120,1]\n",
-    "    topo_axis = Axis(f[1, 1], aspect = DataAspect(), title = \"Interactive topoplot\")\n",
-    "    topo = eeg_topoplot!(topo_axis, topo_slice, # averaging all trial of 30 participants on Xth msec\n",
-    "        labels;\n",
-    "        positions=pos, # produced  automatically from ch_names\n",
-    "        interpolation=NullInterpolator(),\n",
-    "        enlarge=1.2,\n",
-    "        markersize = 10,\n",
-    "        extrapolation=GeomExtrapolation(enlarge=1.3, geometry=Circle),\n",
-    "        label_text=true) # aspect ratio, correlation of height and width\n",
-    "\n",
-    "    xlims!(-0.2, 1.2)\n",
-    "    ylims!(-0.2, 1.2)\n",
-    "    hidedecorations!(topo_axis)\n",
-    "    hidespines!(topo_axis)\n",
-    "    f\n",
-    "end"
    ]
   },
   {
@@ -617,19 +586,12 @@
     "    end\n",
     "\n",
     "    series!(ax, times, datl2, solid_color=\"#4d4d4d\")\n",
-    "    topo_axis = Axis(f[2:3, 2], width = 345, height = 345, aspect = DataAspect())\n",
-    " \n",
+    "\n",
     "    cmap = collect(ColorScheme(range(colorant\"black\", colorant\"red\", length=2)))\n",
     "    mark_size = repeat([21], sensornum)\n",
-    "\n",
-    "    topo = eeg_topoplot!(topo_axis, mark_color, \n",
-    "    N; \n",
-    "        positions=pos[1:sensornum], # produced  automatically from ch_names\n",
-    "        interpolation=NullInterpolator(),\n",
-    "        enlarge=1,\n",
-    "        colormap = cmap,\n",
-    "        markersize = mark_size,\n",
-    "    ) \n",
+    "    topo_axis = ft_topo_axis(f[2:3, 2], sensornum, times, data; mark_color=mark_color, colormap = cmap, \n",
+    "    interpolation=NullInterpolator(), time=nothing, width_height=345, \n",
+    "    markersize = mark_size)\n",
     "    \n",
     "    labels = [\"s$i\" for i in 1:sensornum]\n",
     "    str = lift((i, labels) -> \"$(labels[i])\", i, labels)\n",
@@ -651,11 +613,10 @@
     "        end\n",
     "    end\n",
     "    hidedecorations!(ax, label = false, ticks = false, ticklabels = false) \n",
-    "    hidedecorations!(topo_axis)    \n",
-    "    hidespines!(topo_axis)\n",
     "    f\n",
     "end\n",
-    "click_butterfly_topoplot(data, pos)"
+    "\n",
+    "click_butterfly_topoplot(data, pos)\n"
    ]
   },
   {
@@ -672,7 +633,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# a chosen line in the front\n",
     "function menu_butterfly_topoplot(data, pos; title=\"Interactive topoplot\", interpolation=ClaughTochter(),\n",
     "    sensornum=64, startpoint=-0.2, steps=100) \n",
     "    N = 1:sensornum\n",
@@ -718,27 +678,17 @@
     "    series!(ax, times, datl2, solid_color=\"#4d4d4d\")\n",
     "\n",
     "    hidedecorations!(ax, label = false, ticks = false, ticklabels = false) \n",
-    "    topo_axis = Axis(f[1:2, 2], width = 345, height = 345, aspect = DataAspect(),\n",
-    "        limits=(0.2, 0.8, 0.2, 0.8))\n",
-    "\n",
     "    cmap = collect(ColorScheme(range(colorant\"black\", colorant\"red\", length=2)))\n",
     "    \n",
     "    mark_size = repeat([21], sensornum)\n",
-    "\n",
     "    labels = [\"s$i\" for i in 1:sensornum]\n",
     "    menu = Menu(f[3, 2], options = labels, default = nothing)\n",
-    "    topo = eeg_topoplot!(topo_axis, mark_color,  N, \n",
-    "        labels; \n",
-    "        positions=pos[1:sensornum], \n",
-    "        interpolation=NullInterpolator(),\n",
-    "        enlarge=1,\n",
-    "        colormap = cmap,\n",
-    "        markersize = mark_size,\n",
-    "        label_text=false\n",
-    "    ) \n",
+    "\n",
+    "    topo_axis = ft_topo_axis(f[1:2, 2], sensornum, mark_color=mark_color, labels=labels, colormap = cmap, \n",
+    "        interpolation=NullInterpolator(), time=nothing, times, data, width_height=345, markersize = mark_size)\n",
     "\n",
     "    lc = nothing\n",
-    "     on(menu.selection) do selected\n",
+    "        on(menu.selection) do selected\n",
     "        if selected != nothing\n",
     "            if lc != nothing\n",
     "                lc.color  = \"#4d4d4d\"\n",
