--- a/prototype.ipynb
+++ b/prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,9 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cart2pol (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "function posToColorRGB(pos)\n",
     "    cx = 0.5 - pos[1]\n",
@@ -222,13 +232,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ft_topo_axis (generic function with 7 methods)"
+       "ft_topo_axis (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -242,7 +252,7 @@
     "    N = 1:sensornum\n",
     "    topo_axis = Axis(f, width = width_height, height = width_height, aspect = DataAspect())\n",
     "    if time == nothing\n",
-    "        topo = eeg_topoplot!(topo_axis, topo_slice, mark_color, N, labels;\n",
+    "        topo = eeg_topoplot!(topo_axis, mark_color, N, labels;\n",
     "        positions=pos[1:sensornum], \n",
     "        enlarge=1,\n",
     "        interpolation=interpolation,\n",
@@ -259,6 +269,7 @@
     "        colormap = colormap,\n",
     "        label_scatter=(markersize=markersize, strokewidth=0.5) \n",
     "        ) \n",
+    "    end\n",
     "end"
    ]
   },
@@ -278,9 +289,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching ft_topo_axis(::GridPosition, ::Int64, ::StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}, ::Array{Float32, 3}; time::Nothing, topo_slice::Vector{Float32}, width_height::Int64, markersize::Int64, label_text::Bool)\n\nClosest candidates are:\n  ft_topo_axis(::Any, ::Any, ::Any, ::Any; time, width_height, labels, mark_color, markersize, interpolation, colormap) got unsupported keyword arguments \"topo_slice\", \"label_text\"\n   @ Main c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:1\n",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching ft_topo_axis(::GridPosition, ::Int64, ::StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}, ::Array{Float32, 3}; time::Nothing, topo_slice::Vector{Float32}, width_height::Int64, markersize::Int64, label_text::Bool)\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  ft_topo_axis(::Any, ::Any, ::Any, ::Any; time, width_height, labels, mark_color, markersize, interpolation, colormap) got unsupported keyword arguments \"topo_slice\", \"label_text\"\n",
+      "   @ Main c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:1\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] kwerr(::NamedTuple{(:time, :topo_slice, :width_height, :markersize, :label_text), Tuple{Nothing, Vector{Float32}, Int64, Int64, Bool}}, ::Function, ::GridPosition, ::Int64, ::StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}, ::Array{Float32, 3})\n",
+      "   @ Base .\\error.jl:165\n",
+      " [2] top-level scope\n",
+      "   @ c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:8"
+     ]
+    }
+   ],
    "source": [
     "let \n",
     "    data, pos = TopoPlots.example_data()\n",
@@ -305,9 +336,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `topo_slice` not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `topo_slice` not defined\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] ft_topo_axis(f::GridPosition, sensornum::Int64, times::StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}, data::Array{Float32, 3}; time::Observable{Any}, width_height::Int64, labels::Nothing, mark_color::Nothing, markersize::Int64, interpolation::CloughTocher, colormap::Reverse{Symbol})\n",
+      "   @ Main c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:7\n",
+      " [2] slider_topoplot(data::Array{Float32, 3}, pos::Vector{Point{2, Float32}}; title::String, interpolation::CloughTocher)\n",
+      "   @ Main c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:12\n",
+      " [3] slider_topoplot(data::Array{Float32, 3}, pos::Vector{Point{2, Float32}})\n",
+      "   @ Main c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:1\n",
+      " [4] top-level scope\n",
+      "   @ c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:30"
+     ]
+    }
+   ],
    "source": [
     "function slider_topoplot(data, pos; \n",
     "    title=\"Interactive topoplot\", \n",
@@ -416,9 +466,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `topo_slice` not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `topo_slice` not defined\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] ft_topo_axis(f::GridPosition, sensornum::Int64, times::StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}, data::Array{Float32, 3}; time::Nothing, width_height::Int64, labels::Nothing, mark_color::Nothing, markersize::Int64, interpolation::NullInterpolator, colormap::Observable{Vector{Any}})\n",
+      "   @ Main c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:7\n",
+      " [2] toggle_butterfly_topoplot(data::Array{Float32, 3}, pos::Vector{Point{2, Float32}}; title::String, interpolation::CloughTocher, sensornum::Int64, startpoint::Float64, steps::Int64)\n",
+      "   @ Main c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:34\n",
+      " [3] toggle_butterfly_topoplot(data::Array{Float32, 3}, pos::Vector{Point{2, Float32}})\n",
+      "   @ Main c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:2\n",
+      " [4] top-level scope\n",
+      "   @ c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:46"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "function toggle_butterfly_topoplot(data, pos; title=\"Interactive topoplot\", interpolation=ClaughTochter(),\n",
@@ -485,9 +554,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: Port in use, using different port. New port: 9385\n",
+      "└ @ JSServe.HTTPServer C:\\Users\\Vlad\\.julia\\packages\\JSServe\\qgqel\\src\\HTTPServer\\implementation.jl:273\n"
+     ]
+    }
+   ],
    "source": [
     "function click_topoplot(data, pos; interpolation=ClaughTochter(),\n",
     "    sensornum=64) \n",
@@ -539,9 +617,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching length(::Nothing)\n\nClosest candidates are:\n  length(!Matched::Union{Base.KeySet, Base.ValueIterator})\n   @ Base abstractdict.jl:58\n  length(!Matched::Union{SparseArrays.FixedSparseVector{Tv, Ti}, SparseArrays.SparseVector{Tv, Ti}} where {Tv, Ti})\n   @ SparseArrays C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.9.2\\share\\julia\\stdlib\\v1.9\\SparseArrays\\src\\sparsevector.jl:95\n  length(!Matched::Union{Adjoint{T, <:Union{StaticArraysCore.StaticArray{Tuple{var\"#s2\"}, T, 1} where var\"#s2\", StaticArraysCore.StaticArray{Tuple{var\"#s3\", var\"#s4\"}, T, 2} where {var\"#s3\", var\"#s4\"}}}, Diagonal{T, <:StaticArraysCore.StaticArray{Tuple{var\"#s14\"}, T, 1} where var\"#s14\"}, Hermitian{T, <:StaticArraysCore.StaticArray{Tuple{var\"#s11\", var\"#s12\"}, T, 2} where {var\"#s11\", var\"#s12\"}}, LowerTriangular{T, <:StaticArraysCore.StaticArray{Tuple{var\"#s19\", var\"#s20\"}, T, 2} where {var\"#s19\", var\"#s20\"}}, Symmetric{T, <:StaticArraysCore.StaticArray{Tuple{var\"#s8\", var\"#s9\"}, T, 2} where {var\"#s8\", var\"#s9\"}}, Transpose{T, <:Union{StaticArraysCore.StaticArray{Tuple{var\"#s2\"}, T, 1} where var\"#s2\", StaticArraysCore.StaticArray{Tuple{var\"#s3\", var\"#s4\"}, T, 2} where {var\"#s3\", var\"#s4\"}}}, UnitLowerTriangular{T, <:StaticArraysCore.StaticArray{Tuple{var\"#s25\", var\"#s26\"}, T, 2} where {var\"#s25\", var\"#s26\"}}, UnitUpperTriangular{T, <:StaticArraysCore.StaticArray{Tuple{var\"#s22\", var\"#s23\"}, T, 2} where {var\"#s22\", var\"#s23\"}}, UpperTriangular{T, <:StaticArraysCore.StaticArray{Tuple{var\"#s16\", var\"#s17\"}, T, 2} where {var\"#s16\", var\"#s17\"}}, StaticArraysCore.StaticArray{Tuple{var\"#s26\"}, T, 1} where var\"#s26\", StaticArraysCore.StaticArray{Tuple{var\"#s1\", var\"#s4\"}, T, 2} where {var\"#s1\", var\"#s4\"}, StaticArraysCore.StaticArray{<:Tuple, T}} where T)\n   @ StaticArrays C:\\Users\\Vlad\\.julia\\packages\\StaticArrays\\9KYrc\\src\\abstractarray.jl:1\n  ...\n",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching length(::Nothing)\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  length(!Matched::Union{Base.KeySet, Base.ValueIterator})\n",
+      "   @ Base abstractdict.jl:58\n",
+      "  length(!Matched::Union{SparseArrays.FixedSparseVector{Tv, Ti}, SparseArrays.SparseVector{Tv, Ti}} where {Tv, Ti})\n",
+      "   @ SparseArrays C:\\Users\\Vlad\\AppData\\Local\\Programs\\julia-1.9.2\\share\\julia\\stdlib\\v1.9\\SparseArrays\\src\\sparsevector.jl:95\n",
+      "  length(!Matched::Union{Adjoint{T, <:Union{StaticArraysCore.StaticArray{Tuple{var\"#s2\"}, T, 1} where var\"#s2\", StaticArraysCore.StaticArray{Tuple{var\"#s3\", var\"#s4\"}, T, 2} where {var\"#s3\", var\"#s4\"}}}, Diagonal{T, <:StaticArraysCore.StaticArray{Tuple{var\"#s14\"}, T, 1} where var\"#s14\"}, Hermitian{T, <:StaticArraysCore.StaticArray{Tuple{var\"#s11\", var\"#s12\"}, T, 2} where {var\"#s11\", var\"#s12\"}}, LowerTriangular{T, <:StaticArraysCore.StaticArray{Tuple{var\"#s19\", var\"#s20\"}, T, 2} where {var\"#s19\", var\"#s20\"}}, Symmetric{T, <:StaticArraysCore.StaticArray{Tuple{var\"#s8\", var\"#s9\"}, T, 2} where {var\"#s8\", var\"#s9\"}}, Transpose{T, <:Union{StaticArraysCore.StaticArray{Tuple{var\"#s2\"}, T, 1} where var\"#s2\", StaticArraysCore.StaticArray{Tuple{var\"#s3\", var\"#s4\"}, T, 2} where {var\"#s3\", var\"#s4\"}}}, UnitLowerTriangular{T, <:StaticArraysCore.StaticArray{Tuple{var\"#s25\", var\"#s26\"}, T, 2} where {var\"#s25\", var\"#s26\"}}, UnitUpperTriangular{T, <:StaticArraysCore.StaticArray{Tuple{var\"#s22\", var\"#s23\"}, T, 2} where {var\"#s22\", var\"#s23\"}}, UpperTriangular{T, <:StaticArraysCore.StaticArray{Tuple{var\"#s16\", var\"#s17\"}, T, 2} where {var\"#s16\", var\"#s17\"}}, StaticArraysCore.StaticArray{Tuple{var\"#s26\"}, T, 1} where var\"#s26\", StaticArraysCore.StaticArray{Tuple{var\"#s1\", var\"#s4\"}, T, 2} where {var\"#s1\", var\"#s4\"}, StaticArraysCore.StaticArray{<:Tuple, T}} where T)\n",
+      "   @ StaticArrays C:\\Users\\Vlad\\.julia\\packages\\StaticArrays\\9KYrc\\src\\abstractarray.jl:1\n",
+      "  ...\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] _zip_min_length(is::Tuple{Nothing, Array{Float32, 3}})\n",
+      "    @ Base.Iterators .\\iterators.jl:382\n",
+      "  [2] length(z::Base.Iterators.Zip{Tuple{Nothing, Array{Float32, 3}}})\n",
+      "    @ Base.Iterators .\\iterators.jl:372\n",
+      "  [3] length(g::Base.Generator{Base.Iterators.Zip{Tuple{Nothing, Array{Float32, 3}}}, Base.var\"#4#5\"{var\"#47#48\"{Int64, StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}}}})\n",
+      "    @ Base .\\generator.jl:50\n",
+      "  [4] _similar_shape(itr::Base.Generator{Base.Iterators.Zip{Tuple{Nothing, Array{Float32, 3}}}, Base.var\"#4#5\"{var\"#47#48\"{Int64, StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}}}}, #unused#::Base.HasLength)\n",
+      "    @ Base .\\array.jl:658\n",
+      "  [5] collect(itr::Base.Generator{Base.Iterators.Zip{Tuple{Nothing, Array{Float32, 3}}}, Base.var\"#4#5\"{var\"#47#48\"{Int64, StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}}}})\n",
+      "    @ Base .\\array.jl:781\n",
+      "  [6] map(::Function, ::Nothing, ::Array{Float32, 3})\n",
+      "    @ Base .\\abstractarray.jl:3383\n",
+      "  [7] ft_topo_axis(f::GridPosition, sensornum::Int64, times::StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}, data::Array{Float32, 3}; time::Nothing, width_height::Int64, labels::Nothing, mark_color::Observable{Vector{Int64}}, markersize::Vector{Int64}, interpolation::NullInterpolator, colormap::Vector{Any})\n",
+      "    @ Main c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:15\n",
+      "  [8] click_butterfly_topoplot(data::Array{Float32, 3}, pos::Vector{Point{2, Float32}}; title::String, interpolation::CloughTocher, sensornum::Int64, startpoint::Float64, steps::Int64)\n",
+      "    @ Main c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:48\n",
+      "  [9] click_butterfly_topoplot(data::Array{Float32, 3}, pos::Vector{Point{2, Float32}})\n",
+      "    @ Main c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:1\n",
+      " [10] top-level scope\n",
+      "    @ c:\\Users\\Vlad\\Projects\\Dashboard\\prototype.ipynb:75"
+     ]
+    }
+   ],
    "source": [
     "function click_butterfly_topoplot(data, pos; title=\"Interactive topoplot\", interpolation=ClaughTochter(),\n",
     "    sensornum=64, startpoint=-0.2, steps=100)  \n",
@@ -552,7 +671,8 @@
     "    times = range(startpoint, length=size(data, 2), step=steps)  \n",
     "    endpoint = times[end]\n",
     "\n",
-    "    f = Figure(backgroundcolor = RGBf(0.98, 0.98, 0.98), resolution = (1500, 700))\n",
+    "    f = Figure(#backgroundcolor = RGBf(0.98, 0.98, 0.98), \n",
+    "    resolution = (1500, 700))\n",
     "    ax = Axis(f[1:3, 1], xlabel = \"Time [s]\", ylabel = \"Voltage amplitude [µV]\")\n",
     "\n",
     "    hidespines!(ax, :t, :r) \n",
